# deploy

./: .dockerignore  .env.example  .gitignore  README.md  backend.dockerfile  celery.worker.dockerfile  data.json  drugs.py  pyproject.toml  requirements.txt  response_1712344366538.json  temp.py  test.dockerfile  trials.py
alembic/versions/: 0238ee6479cd_1_user.py  05f81e99dcb9_1_user.py  0f9ed2a14284_8_history.py  130ca4cb4628_2_chat.py  130ca4cb4628_3_chat.py  1943935a1011_2_protocol.py  1943935a1011_3_protocol.py  2fc8d85db0b6_3_protocol.py  301acc0d2769_2_chat.py  394854b45131_2_chat.py  473c2b722d39_7_email_verified_at.py  578d557928f3_4_step_order.py  5a8e347b8273_3_chat.py  5f556f30065c_3_chat.py  8f59971b5755_3_chat.py  a581bdb2e490_3_protocol.py  c7b9164ea538_6_protocol_file.py  ca1e88951622_5_protocol_current_step.py  e516a16c73a8_4_history.py  e5e9245d3780_5_pinecone.py  edbc1f5fcf44_5_pinecone.py
app/: main.py
app/conf/: config.py
app/contrib/account/: __init__.py  api.py  models.py  repository.py  schema.py
app/contrib/chat/: api.py  models.py  repository.py  schema.py  utils.py
app/contrib/graph_knowledge/: README.md  __init__.py  api.py  graph_analysis.py  pretrained_model.py  repository.py  resources.txt  schema.py  utils.py
app/contrib/graph_knowledge/data/Structured data/: drugs-side-effects.xlsx
app/contrib/graph_knowledge/data_preprocessing/: PDF_data_extractor.py  Preprocess_semi_structured_data.py  Preprocess_structured_data.py  search_funtions.py
app/contrib/graph_knowledge/notebooks/: Create clinical trial dataset.ipynb  Create drugs KG dataset.ipynb  Create final drugs data.ipynb  Process semi-structured data.ipynb  Processing PDF files.ipynb
app/contrib/history/: __init__.py  api.py  models.py  repository.py  schema.py
app/contrib/pinecone/: __init__.py  api.py  exceptions.py  handlers.py  models.py  repository.py  schema.py  upload.py
app/contrib/protocol/: __init__.py  api.py  models.py  repository.py  schema.py  utils.py
app/core/: schema.py
app/db/: alembic.py  init_db.py  models.py  repository.py  session.py
app/routers/: api.py  dependency.py
app/utils/: emails.py  file.py  sanitizer.py  security.py  templating.py
app/utils/translation/: middleware.py
templates/invoice/: index.html  styles.css
tests/: conftest.py
tests/api/: test_account.py  test_gk.py
tests/utils/: test_gk.py
