[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["xykylikuf <jumageldiyewb@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.28"
sqlalchemy-utils = "^0.41.1"
asgi-lifespan = "^2.1.0"
asgiref = "^3.7.2"
cryptography = "^42.0.5"
ecdsa = "^0.18.0"
email-validator = "^2.1.1"
emails = "^0.6"
gunicorn = "^21.2.0"
httpx = "^0.27.0"
loguru = "^0.7.2"
orjson = "^3.9.15"
pyasn1 = "^0.5.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
requests = "^2.31.0"
rsa = "^4.9"
tenacity = "^8.2.3"
asyncpg = "^0.29.0"
uvicorn = "^0.28.0"
pillow = "^10.2.0"
babel = "^2.14.0"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
greenlet = "^3.0.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
faker = "^24.2.0"
mjml = "^0.11.0"
mypy = "^1.9.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
toml-sort = "^0.23.1"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.tomlsort]
all = true
ignore_case = true
in_place = true
no_header = true