[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["xykylikuf <jumageldiyewb@list.ru>"]
description = ""
name = "app"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
alembic = "^1.13.1"
asgi-lifespan = "^2.1.0"
asgiref = "^3.7.2"
asyncpg = "^0.29.0"
babel = "^2.14.0"
bcrypt = "4.0.1"
beautifulsoup4 = "^4.12.3"
cryptography = "^42.0.5"
ecdsa = "^0.18.0"
email-validator = "^2.1.1"
emails = "^0.6"
fastapi = "^0.110.0"
greenlet = "^3.0.3"
gunicorn = "^21.2.0"
httpx = "^0.27.0"
loguru = "^0.7.2"
lxml = "^5.1.0"
orjson = "^3.9.15"
passlib = "^1.7.4"
pillow = "^10.2.0"
psycopg2-binary = "^2.9.9"
pyasn1 = "^0.5.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
python = "^3.10"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
requests = "^2.31.0"
rsa = "^4.9"
sqlalchemy = "2.0.27"
sqlalchemy-utils = "^0.41.1"
tenacity = "^8.2.3"
uvicorn = "^0.28.0"
langchain = "^0.1.13"
langchain-community = "^0.0.29"
langchain-core = "^0.1.33"
langchain-openai = "^0.1.0"
fastapi-pagination = "^0.12.21"
sqlakeyset = "^2.0.1708907391"
htmldocx = "^0.0.6"
weasyprint = "^61.2"
transformers = "^4.39.3"
pandas = "^2.2.1"
networkx = "^3.2.1"

[tool.poetry.group.dev.dependencies]
faker = "^24.2.0"
isort = "^5.13.2"
mjml = "^0.11.0"
mypy = "^1.9.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5.post1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
toml-sort = "^0.23.1"

[tool.tomlsort]
all = true
ignore_case = true
in_place = true
no_header = true
